# ml-kem

./: .gitmodules  error.txt  sdkconfig  sdkconfig.old
components/mlkem_embedded/: CMakeLists.txt
components/mlkem_native/: CMakeLists.txt
main/: CMakeLists.txt
main/include/: notrandombytes.h
main/mlkem-embedded/mlkem/: indcpa.c  kem.c  params.h  poly.c
main/src/: main.c  notrandombytes.c
main/src/mlkem/: mlkem_native.h
