# https://esp32.com/viewtopic.php?t=42080
set(EXTRA_COMPONENT_DIRS "mlkem-native/mlkem")

idf_component_register(
  SRC_DIRS "mlkem-native/mlkem"
           "mlkem-native/mlkem/src"
           "mlkem-native/mlkem/src/fips202"
           "mlkem-native/mlkem/src/fips202/native"
           "mlkem-native/mlkem/src/fips202/native/aarch64"
           "mlkem-native/mlkem/src/fips202/native/aarch64/src"
           "mlkem-native/mlkem/src/fips202/native/x86_64"
           "mlkem-native/mlkem/src/fips202/native/x86_64/src"
           "mlkem-native/mlkem/src/native"
           "mlkem-native/mlkem/src/native/aarch64"
           "mlkem-native/mlkem/src/native/aarch64/src"
           "mlkem-native/mlkem/src/native/riscv64"
           "mlkem-native/mlkem/src/native/riscv64/src"
           "mlkem-native/mlkem/src/native/x86_64"
           "mlkem-native/mlkem/src/native/x86_64/src"
  INCLUDE_DIRS "mlkem-native/mlkem"
               "mlkem-native/mlkem/src"
               "mlkem-native/mlkem/src/fips202"
               "mlkem-native/mlkem/src/fips202/native"
               "mlkem-native/mlkem/src/fips202/native/aarch64"
               "mlkem-native/mlkem/src/fips202/native/aarch64/src"
               "mlkem-native/mlkem/src/fips202/native/x86_64"
               "mlkem-native/mlkem/src/fips202/native/x86_64/src"
               "mlkem-native/mlkem/src/native"
               "mlkem-native/mlkem/src/native/aarch64"
               "mlkem-native/mlkem/src/native/aarch64/src"
               "mlkem-native/mlkem/src/native/riscv64"
               "mlkem-native/mlkem/src/native/riscv64/src"
               "mlkem-native/mlkem/src/native/x86_64"
               "mlkem-native/mlkem/src/native/x86_64/src"
  PRIV_REQUIRES "utilities")